--- a/footer/footer.css
+++ b/footer/footer.css
@@ -3,7 +3,7 @@
     height: 6.4rem;
     border: 1px solid black;
     background-color: cadetblue;
-    margin: 35rem 11.04rem;
+    margin: 35rem auto;
     padding: 0px 17px;
 
     display: grid;
