--- a/footer/footer.css
+++ b/footer/footer.css
@@ -2,21 +2,146 @@
     width: 70rem;
     height: 6.4rem;
     border: 1px solid black;
-    background-color: cadetblue;
+    background-color: green;
     margin: 35rem auto;
-    padding: 0px 17px;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
 }
 
-.creditos {
+.cuadritos8 {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
-.redes {
-    margin: auto;
+.cuadritos8 img {
+    width: 4rem;
+    height: 3.5rem;
+    border-radius: 10px;
+    position: absolute;
+}
+
+.cuadritos7 {
+    padding: 0.6rem 3rem;
+}
+
+.cuadritos7 h4 {
+    color: white;
+}
+
+.img9 {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 12px;
+    margin: -0.1rem -0.4rem;
+    position: absolute;
+}
+
+.img8 {
+    width: 2rem;
+    height: 1.2rem;
+    border-radius: 12px;
+    margin: 0.4rem -0.7rem;
+    position: absolute;
+}
+
+.img7 {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 16px;
+    margin: -0.1rem -0.4rem;
+    position: absolute;
+}
+
+.title {
+    padding: 0px 1.3rem;
+}
+
+.title2 {
+    padding: 0.4rem 1.3rem;
+}
+
+.title3 {
+    padding: 0px 1.3rem;
+}
+
+.cuadritos6 {
+    padding: 0.7rem 2.7rem;
+}
+
+.cuadritos6 h4 {
+    color: white;
+}
+
+.cuadritos5 {
+    padding: 0.3rem 4.5rem;
+}
+
+.cuadritos5 h4 {
+    color: white;
+}
+
+.ft {
+    width: 2rem;
+    height: 2rem;
+    margin: 0px -2.2rem;
+    position: absolute;
+    border-radius: 14px;
+}
+
+.ft2 {
+    width: 2rem;
+    height: 2rem;
+    margin: 5px -2.2rem;
+    position: absolute;
+    border-radius: 14px;
+}
+
+.repo {
+    padding: 0.3rem 0px;
+}
+
+.cuadritos4 {
+    padding: 4px 4.2rem;
+}
+
+.cuadritos4 h4 {
+    color: white;
+}
+
+.img1 {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 16px;
+    position: absolute;
+}
+
+.img2 {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0.5rem auto;
+    border-radius: 16px;
+    position: absolute;
+}
+
+.img3 {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0rem auto;
+    border-radius: 16px;
+    position: absolute;
+}
+
+.titulo {
+    padding: 0px 2rem;
+}
+
+.titulo2 {
+    padding: 0.5rem 2rem;
+}
+
+.titulo3 {
+    padding: 0.2rem 2rem;
 }
