--- a/header/header.css
+++ b/header/header.css
@@ -48,6 +48,7 @@
     background-color: green;
     border-radius: 8px;
     color: white;
+    font-size: 1.2rem;
 
     display: flex;
     align-items: center;
