--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 70rem;
     height: 6.4rem;
-    background-color: green;
+    background-color: rgb(37, 114, 145);
     margin: 35rem auto;
 
     display: grid;
