--- a/header/header.css
+++ b/header/header.css
@@ -2,16 +2,19 @@
     width: 70rem;
     height: 5rem;
     margin: auto;
-    padding: 1.8rem;
+    border: 2px solid black;
+    padding: 0px 2.5rem;
 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 15rem 30.5rem 27rem;
+    grid-template-rows: 1fr;
 }
 
 .header img {
-    width: 5.5rem;
-    height: 6rem;
+    width: 5rem;
+    height: 4.5rem;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 .nombres {
@@ -19,11 +22,11 @@
     height: 2rem;
     display: flex;
     align-items: center;
-    gap: 5.4rem;
+    gap: 73px;
+    margin: auto;  
 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+   grid-column: 2/3;
+   grid-row: 1/2;
 }
 
 .nombres2-1 {
@@ -46,9 +49,12 @@
     width: 10rem;
     height: 2.5rem;
     background-color: rgb(10, 85, 114);
+    margin: auto;
     border-radius: 8px; 
     color: white;
     font-size: 1.1rem;
+    grid-column: 3/4;
+    grid-row: 1/2;
 
     display: flex;
     align-items: center;
